# slds-eval

./: .env_template  .gitignore  README.md  evaluate.py  pyproject.toml
custom_task/: slds.py
